--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sovereign Empire Command Center</title>
+    <title>Absolute Cardiac Command - V2.0</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&display=swap');
@@ -45,6 +45,29 @@
         background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
         background-size: 100% 2px, 3px 100%;
         z-index: 100;
+      }
+      @keyframes heartbeat-pulse {
+        0%, 100% { transform: scale(1); filter: brightness(1); }
+        50% { transform: scale(1.002); filter: brightness(1.2); }
+      }
+      .heartbeat-sync {
+        animation: heartbeat-pulse 0.8s infinite ease-in-out;
+      }
+      @keyframes violent-shake {
+        0% { transform: translate(0, 0); }
+        10% { transform: translate(-5px, -5px); }
+        20% { transform: translate(5px, 5px); }
+        30% { transform: translate(-5px, 5px); }
+        40% { transform: translate(5px, -5px); }
+        50% { transform: translate(-5px, -5px); }
+        60% { transform: translate(5px, 5px); }
+        70% { transform: translate(-5px, 5px); }
+        80% { transform: translate(5px, -5px); }
+        90% { transform: translate(-5px, -5px); }
+        100% { transform: translate(0, 0); }
+      }
+      .strike-shake {
+        animation: violent-shake 0.4s cubic-bezier(.36,.07,.19,.97) both;
       }
     </style>
   <script type="importmap">
